--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "vampyr" %}
-{% set version = "1.0rc0" %}
-{% set sha256 = "ec8ecdd1af4b1478b596af25c7e5aed4eb00752fa1f9c7760fe1a6c8807619de" %}
-{% set build = 1 %}
+{% set version = "1.0rc1" %}
+{% set sha256 = "e709359033b27d166d5d60827552a92d8d2e73c3c9f7d54ec7ef562c9f497042" %}
+{% set build = 0 %}
 
 package:
   name: {{ name|lower }}
@@ -28,7 +28,7 @@ requirements:
     - llvm-openmp  # [osx or win]
     - libgomp  # [linux]
   host:
-    - mrcpp >=1.5.0
+    #- mrcpp >=1.5.0
     - python
     - pybind11
     - pybind11-abi
