--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,8 @@ requirements:
     - ninja
     - llvm-openmp  # [osx or win]
     - libgomp  # [linux]
+    # needed when not using the released MRCPP
+    - eigen
   host:
     #- mrcpp >=1.5.0
     - python
@@ -52,11 +54,6 @@ test:
     # run the tests
     - export OMP_NUM_THREADS=$CPU_COUNT  # [unix]                           
     - $PYTHON -m pytest --capture=no --log-cli-level=INFO --pyargs vampyr  # [python_impl != "pypy"]
-
-outputs:
-  - name: vampyr
-    files:
-      - {{ SP_DIR }}/vampyr
 
 about:
   home: https://github.com/MRChemSoft/vampyr
